--- a/index.html
+++ b/index.html
@@ -6,39 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEIA ESSE BILHETE!!!</title>
     <link rel="stylesheet" href="assets/styles.css">
-    <link rel="icon" href="./assets/coracao.png">
+    <link rel="icon" href="./assets/images/coracao.png">
 </head>
 
 <body onload="tocarMusica('audio')">
 
-    <audio id="backgroundMusic">
-        <source src="assets/George Michael - Careless Whisper (Official Video).mp3" type="audio/mpeg">
-        Seu navegador não suporta o elemento de áudio.
-    </audio>
+<!--
+<audio id="backgroundMusic">
+    <source src="assets/George Michael - Careless Whisper (Official Video).mp3" type="audio/mpeg">
+    Seu navegador não suporta o elemento de áudio.
+</audio>
+-->
 
     <div class="container">
         <div id="text"></div>
 
         <div class="image-container">
-            <!-- Substitua aqui com a URL da nova imagem para a esquerda -->
-            <img id="left-image" src="./assets/vivi2.jpg" alt="Imagem Esquerda">
+
+            <!-- IMAGEM DA ESQUERDA -->
+            <img id="left-image" src="./assets/images/vivi2.jpg" alt="Imagem Esquerda">
             <div id="envolpe_img"></div>
-            <!-- Substitua aqui com a URL da nova imagem para a direita -->
-            <img id="right-image" src="./assets/vivi3.jpg" alt="Imagem Direita">
+
+            <!-- IMAGEM DA DIREITA -->
+            <img id="right-image" src="./assets/images/vivi3.jpg" alt="Imagem Direita">
         </div>
 
+            <!-- ID DO BOTAO CORACAO -->
         <button id="button" class="coracao">&#10084;</button>
         <div id="dialog"></div>
     </div>
+
     <script src="assets/script.js"></script>
 
-    <script>
+   <!-- <script>
         function tocarMusica(nomeArquivo) {
             const audio = document.getElementById("backgroundMusic");
             audio.src = `assets/${nomeArquivo}.mp3`;
             audio.play();
         }
-    </script>
+    </script> -->
+
 </body>
 
 </html>
